QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

CVS HEAD

- Get configure to try and detect the correct qmake location and
  insert it the search order, so let the qt4 tools take precedence
  when --with-qt option is given and older qt3 ones coexist and
  are found located ahead in the PATH.

- The connections widget is now being properly refreshed, due to
  some quirk in the QTreeWidget which was preventing some items,
  specially the expanded ones, to disappear in the void. Meanwhile,
  with a hand from Stephane Letz, the client/port lookup method was
  changed to prevent duplicated, missing or worse, crashes due to
  weird behaved windows applications.

- The xrun count stats can now be reset simply by middle clicking
  on the systray icon or the main window's display area (thanks to
  patch sent by Dominic Sacré).

- An improved version of the "shiny" background image was issued.
  The original somehow looked like two different images put together,
  probably most apparent on a bright TFT screen (by Dominic Sacré).

- A warning is now being issued, asking whether one wants to remove a
  corresponding Patchbay connection, when client/ports are being
  disconnected over the Connections window, thus avoiding automatic
  reconnection annoyance due to normal active Patchbay behavior.

- The infamous "Keep child windows always on top" global option is
  now supposed to behave a little better when disabled, layering
  child windows as naturally as far the window manager dictates.

- Input/Ouput Channel setting is now allowed to be greater than 32;
  the special default text is now displayed, also on Input/Output
  Latency and Priority settings spin-boxes. 

- Andreas Persson just sent a patch that makes it possible to compile
  and run qjackctl with Qt version 4.1. Applied whithout hesitation,
  thanks.


0.3.1a  2007-07-19  System-tray tooltip icon crash fix.
